tests/fixtures/negative/skf1-unsupported-chunk-size.hex
534b4631010100100001
0000000000000000000000000000000000000000000000000000000000000000
0000000000000000
